--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "factsolotl",
+  "homepage": "https://rbouissey.github.io/Factsolotl/",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rbouissey.github.io/Factsolotl/",
   "dependencies": {
     "@babel/core": "7.7.4",
     "@svgr/webpack": "4.3.3",
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "axios": "^0.16.2",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -18,6 +19,7 @@
     "babel-preset-react-app": "^9.1.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cross-fetch": "^3.0.4",
     "css-loader": "3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -51,6 +53,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
@@ -66,10 +70,10 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "predeploy": "yarn run build",
-   "deploy": "gh-pages -d build",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -87,7 +91,7 @@
     ]
   },
   "devDependencies": {
-    "deploy-to-git": "^0.1.5",
+    "gh-pages": "^2.1.1",
     "url-loader": "^3.0.0"
   },
   "jest": {
