--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
