--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
@@ -65,6 +66,7 @@
     "terser-webpack-plugin": "2.2.1",
     "ts-pnp": "1.1.5",
     "url-loader": "2.3.0",
+    "uuid": "^3.2.1",
     "webpack": "4.41.2",
     "webpack-dev-server": "3.9.0",
     "webpack-manifest-plugin": "2.2.0",
