--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-google-charts": "^3.0.15",
     "react-google-maps": "^9.4.5",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.1.2",
